Update templates ,Naye page par redirect sikha

--- a/first_project/templates/ghar.html
+++ b/first_project/templates/ghar.html
@@ -8,5 +8,13 @@
 <body>
     <h1>Mai django ka main page hu babua </h1>
     <h3>TO kaise hai aap sab 🥲🥲🥲</h3>
+    <div>
+        <a href="contact/" target = "_blank"> contact</a>
+        <!-- target = "_blank use karne se naye page me open hotahai" -->
+        <a href="{%url 'about'%}"> about</a>
+        <!-- this is dynamic url path , 100 page hai aur path badalna hai to sabhi me nahi badalna padega path , bass url me badal do sbb jagah ho jayega -->
+        <a href="home/">Home</a>
+    </div>
+
 </body>
 </html>
