--- a/first_project/templates/index.html
+++ b/first_project/templates/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h3>I am Home page of Django :) 😁😁😁</h3>
+    <a href="/">ghar</a> 
+    <!-- it is static url -->
 </body>
 </html>
